[package]
name = "hls"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio-util = { version = "0.7", features = ["codec"] }
tokio = { version = "1.24", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
uuid = { version = "1.1", features = ["v4"] }
httpflv = { path = "../httpflv" }
mpegts = { path = "../mpegts" }
rtmp = { path = "../rtmp" }
flv = { path = "../flv" }
failure = "0.1"
bytes = "1.2"
log = "0.4"
