[package]
name = "xiu"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.18", features = ["full"] }
simplelog = "0.12"
failure = "0.1"
anyhow = "1.0"
chrono = "0.4"
toml = "0.5"
time = "0.3"
log = "0.4"

config = "0.13"

rtmp = { path = "../rtmp" }
httpflv = { path = "../httpflv" }
hls = { path = "../hls" }
